// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Category.svelte > should render using default props 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tabs-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tabs-content=""
        role="tabpanel"
      >
        <div
          data-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified class 1`] = `
<div>
  <section
    class="custom-class"
  >
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tabs-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tabs-content=""
        role="tabpanel"
      >
        <div
          data-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified class 2`] = `
<div>
  <section
    class="custom-class-2"
  >
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tabs-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tabs-content=""
        role="tabpanel"
      >
        <div
          data-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified type 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tabs-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tabs-content=""
        role="tabpanel"
      >
        <div
          data-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="horizontal"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render using specified type 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tabs-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tabs-content=""
        role="tabpanel"
      >
        <div
          data-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="section"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with alternative navigator 1`] = `
<div>
  <section>
    <!---->
    <!---->
    <div
      aria-disabled="false"
      aria-label="Toggle Switch"
      aria-orientation="horizontal"
      data-switch-compact="false"
      data-switch-off="false"
      data-switch-on="false"
      data-switch-root=""
      role="listbox"
      tabindex="0"
    >
      <div
        aria-selected="false"
        class="relative"
        data-path="0"
        data-switch-item=""
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
         
        <p>
          one
        </p>
        <!---->
        <!---->
      </div>
      <div
        aria-selected="false"
        class="relative"
        data-path="1"
        data-switch-item=""
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
         
        <p>
          two
        </p>
        <!---->
        <!---->
      </div>
      <div
        aria-selected="false"
        class="relative"
        data-path="2"
        data-switch-item=""
        role="option"
      >
        <!---->
         
        <!---->
        <!---->
         
        <p>
          three
        </p>
        <!---->
        <!---->
      </div>
      
    </div>
    
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with alternative navigator 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="start"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tabs-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tabs-content=""
        role="tabpanel"
      >
        <div
          data-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with extra props 1`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="center"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tabs-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tabs-content=""
        role="tabpanel"
      >
        <div
          data-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;

exports[`Category.svelte > should render with extra props 2`] = `
<div>
  <section>
    <!---->
    <div
      aria-label="tabs"
      data-align="right"
      data-orientation="horizontal"
      data-position="before"
      data-tabs-root=""
      role="tablist"
      tabindex="0"
    >
      <div
        data-tabs-list=""
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        data-tabs-content=""
        role="tabpanel"
      >
        <div
          data-empty=""
        >
          No tabs available.
          <!---->
        </div>
        <!---->
      </div>
    </div>
    
    <!---->
     
    <field-layout
      class="vertical"
    >
      <!---->
    </field-layout>
  </section>
  
</div>
`;
